@@ -62,6 +62,7 @@ DayOfTheWeek, Month DD, YYYY / The Tcpdump Group
       Require "(ip|ip6) proto" value to be within range.
       Require "protochain" value to be within range.
       Always enable the "gateway" primitive.
+      Properly reject "link proto" for DLT_BACNET_MS_TP.
     rpcap:
       Support user names and passwords in rpcap:// and rpcaps:// URLs.
       Add a -t flag to rpcapd to specify the data channel port; from
